Turns HelloWorld components into Panels

--- a/task1/index.html
+++ b/task1/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"></link>
 	<script src="bower_components/system.js/dist/system.js"></script>
 </head>
 <body>
@@ -11,9 +12,9 @@
 		    traceur: 'bower_components/traceur/traceur.js'
 		  }
 		});
-		System.import('src/HelloWorld.js').then(function(HelloWorld) {
+		System.import('src/Panel.js').then(function(Panel) {
 			var container = document.querySelector('#container');
-			var helloWorld = new HelloWorld.default(container);
+			new Panel.default(container, 'Title', 'Body');
 		});
 	</script>
 </body>
